2013-06-10
* extract functions from the Linux kernel, and also extract more strings that
can be found in __ATTR and friends: xgettext won't catch them, so some regular
expression magic is needed.

2013-06-08
* split lookup of kernel symbols, lookup symbols for kernels that are not in
ELF format
* store function names from the Linux kernel as 'kernelfunction'

2013-06-07
* fixes for ELF scanning: I have bumped into situations where corrupt ELF
files (valid header, but files incomplete, for example after broken squashfs
unpacking) would make ELF scanning fail.
* finish RZIP unpacking
* add extra sanity check for broadcom variant of squashfs to properly
determine blacklist (or at least more reliably)
* reorder priorities so squashfs unpacking is run before gzip unpacking
(preventing gzip of unpacking gziped files inside inodes, which sometimes can
happen with the broadcom variant of squashfs, like for example used in the
ASUS RT-N66U)
* fix ZIP blacklisting
* disable mergeBlacklist for now since it is not reliable
* fix extraction of BusyBox version number
* check whether tags returned by unpack scans are in 'noscans' of subsequent
unpack scans. If so, continue on to the next scan.
* add patches for CVE-2012-4024 and CVE-2012-4025 for squashfs4.2
* pass tags around better for leaf scans
* increase fidelity for Linux kernel scanning by locating kernel symbols in
the kernel image (if not ELF) and don't treat them as normal strings to reduce
false positives.

2013-06-06
* use cloning database for Java method names, field names and class names
* add stubs for RZIP unpacking

2013-06-04
* add missing file checksum back to report

2013-05-31
* fix database sanity check

2013-05-19
* add script to walk source tree and compare all source files to database.
This is for my talk @ LinuxCon Japan 2013

2013-05-16
* add 'empty' tag for empty files

2013-05-14
* report duplicate files for top level file

2013-05-11
* tag and release BAT 14

2013-05-10